--- a/app/views/crypto_curs/index.html.erb
+++ b/app/views/crypto_curs/index.html.erb
@@ -22,6 +22,8 @@
         <h3>Tokyo</h3>
         <p>Tokyo is the capital of Japan.</p>
       </div>
+
+      <h3><%= @response %></h3>
     </div>
 
   </div>
