--- a/app/assets/stylesheets/crypto_curs.scss
+++ b/app/assets/stylesheets/crypto_curs.scss
@@ -55,6 +55,9 @@
   overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
+  width: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -92,4 +95,56 @@
 @keyframes fadeEffect {
   from {opacity: 0;}
   to {opacity: 1;}
+}
+
+table {
+  font-size: 16px !important;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 20px;
+
+}
+table {
+
+  background-color: transparent;
+
+}
+table {
+
+  border-spacing: 0;
+  border-collapse: collapse;
+
+}
+* {
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+}
+
+.table > caption + thead > tr:first-child > td, .table > caption + thead > tr:first-child > th, .table > colgroup + thead > tr:first-child > td, .table > colgroup + thead > tr:first-child > th, .table > thead:first-child > tr:first-child > td, .table > thead:first-child > tr:first-child > th {
+
+  border-top: 0;
+
+}
+.table > thead > tr > th {
+
+  vertical-align: bottom;
+  border-bottom: 2px solid #ddd;
+
+}
+.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
+
+  padding: 8px;
+  line-height: 1.42857143;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+
+}
+th {
+
+  text-align: center;
+
 }
